@@ -1,4 +1,4 @@
-﻿<h3>Multifunction 02.00.00</h3>
+﻿<h3>Multifunction 02.00.02</h3>
 <p class="Contributor">
     Chris Hammond <br />
     <a href="mailto:skins@christoc.com">skins@christoc.com</a><br />
@@ -7,6 +7,13 @@
 <hr/>
 <div class="License">
     <h3>About the MultiFunction Skin and Container Package</h3>
+	<p>
+        <b>Version 02.00.02</b>
+		<ul>
+			<li>Added two additional panes to Two-Column layout, now have a large left pane and smaller right, in addition to the smaller left and larger right.</li>
+			
+		</ul>
+	</p>
 <p>
         <b>Version 02.00.01</b>
 		<ul>
